--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
+    "express-validator": "^7.1.0",
     "hbs": "^4.2.0",
     "moment": "^2.30.1",
     "mongoose": "^8.5.0",
@@ -21,6 +22,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
-  "description": ""
+  "description": "",
+  "devDependencies": {}
 }
