--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-validator": "^7.1.0",
     "hbs": "^4.2.0",
     "moment": "^2.30.1",
+    "mongo": "^0.1.0",
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1"
   },
@@ -22,6 +23,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {}
+  "description": ""
 }
